# EasyFlowQ

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  Window_About.py  dataClasses.py  gateClasses.py  index.html  localSettings.default.json  main.py  mainWindow.py  mkdocs.yml  modelClasses.py  plotClasses.py  pyi_mac.sh  pyi_mac.spec  pyi_win.ps1  pyi_win.sh  pyi_win.spec  pyproject.toml  qt_resource_rc.py  renameWindow_CF.py  search.html  sitemap.xml  statWindow.py  window_About.py  window_Comp.py  window_Main.py  window_RenameCF.py  window_RenameMap.py  window_Settings.py  window_Stats.py  wizard_Comp.py
Basic Usage/: index.html
Basic usage/: index.html
Batch renaming/: index.html
Dev notes/: index.html
EasyFlowQ_release_mac/: EasyFlowQ_link
EasyFlowQ_release_win/: EasyFlowQ.bat
FlowCal/: README.md  __init__.py
LICENSE/: index.html
README_PyPI/: index.html
Statistics/: index.html
Subpopulation/: index.html
Tutorial/: index.html
css/: extra.css
demoSamples/: 01-Well-A1.fcs  01-Well-C2.fcs  01-Well-C3.fcs  AutoCompTest_Evan.eflq  SaveTestSimple_v1.2.eflq  SaveTestSimple_v1.3.eflq  SaveTestSimple_v1.4.eflq  SaveTest_v1.0.eflq  ana.efl  empty.efComp  renamingCF.xlsx  renamingCF2.xlsx  statsExport.xlsx  tteses1.eflq  tteses2.eflq
demo_sample/: AutoCompTest_Evan.efComp  AutoCompTest_Evan.eflq  SaveTestSimple_v1.0.eflq  SaveTestSimple_v1.2.eflq  SaveTestSimple_v1.3.eflq  SaveTestSimple_v1.5.eflq  ana.efl  renamingMap.xlsx
docs/: Basic Usage.md  Batch renaming.md  Dev notes.md  LICENSE.md  README.md  README_PyPI.md  Statistics.md  (+2 more)
(+83 files in other folders)
